--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,14 @@
     <string name="ed_yzm">请输入验证码</string>
     <string name="search">搜索</string>
     <string name="car_veh">车辆监控</string>
+    <string name="notifyTitle">提示</string>
+    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
+    <string name="setting">设置</string>
+    <string name="cancel">取消</string>
+    <string name="search_history">搜索历史</string>
+    <string name="clear">清空</string>
+    <string name="et_search">请输入设备名、车架号、借款人</string>
+
 
     <string name="mis_folder_all">All Images</string>
     <string name="mis_photo_unit">Shot</string>
