--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="last_loc_time">最后定位时间:</string>
     <string name="loc_type">定位类型:</string>
     <string name="jz_loc">基站定位</string>
-    <string name="close_loc">追踪</string>
+    <string name="close_loc">跟踪</string>
     <string name="xfzl">下发指令</string>
     <string name="trajectory">轨迹</string>
     <string name="navigation">导航</string>
